# ILPQEC

./: .gitignore  LICENSE  README.md  main.py  mkdocs.yml  prompt.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmark/: benchmark_decoders.py  benchmark_dem_distance.py
docs/: benchmarks.md  css_code.md  dem_distance.md  index.md  math.md  stim_dem.md
docs/superpowers/plans/: 2026-05-06-css-code-distance.md  2026-05-08-dem-equivalent-distance.md
docs/superpowers/specs/: 2026-05-06-css-code-distance-design.md  2026-05-08-dem-equivalent-distance-design.md
examples/: basic_usage.py  surface_code_example.py
src/ilpdecoder/: __init__.py  decoder.py  gurobi_backend.py  sinter_decoder.py  solver.py
src/ilpqec/: __init__.py  css_code.py  decoder.py  dem_distance.py  distance_ilp.py  gf2.py  solver.py
src/mipdecoder/: __init__.py  decoder.py  solver.py
tests/: __init__.py  conftest.py  test_coverage.py  test_css_analysis_coverage.py  test_css_code.py  test_css_distance.py  test_decoder.py  test_dem_distance.py  test_dem_distance_coverage.py  test_gf2.py  test_sinter_decoder.py  test_solver.py  test_validation.py
