[project]
name = "mipdecoder"
version = "0.1.0"
description = "ILP-based Quantum Error Correction Decoder using Pyomo (like JuMP for Python)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "MIPDecoder Contributors"}
]
keywords = [
    "quantum-computing",
    "quantum-error-correction",
    "qec",
    "decoder",
    "ilp",
    "mixed-integer-programming",
    "pyomo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pyomo>=6.0",
]

[project.optional-dependencies]
stim = [
    "stim>=1.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "stim>=1.12",
]

[project.urls]
Homepage = "https://github.com/mipdecoder/mipdecoder"
Documentation = "https://github.com/mipdecoder/mipdecoder#readme"
Repository = "https://github.com/mipdecoder/mipdecoder"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mipdecoder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
