[project]
name = "ilpdecoder"
version = "0.1.0"
description = "ILP-based Quantum Error Correction Decoder"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "ILPDecoder Contributors"}
]
keywords = [
    "quantum-computing",
    "quantum-error-correction",
    "qec",
    "decoder",
    "ilp",
    "mixed-integer-programming",
    "pyomo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20",
    "highspy>=1.10",
]

[project.optional-dependencies]
pyomo = [
    "pyomo>=6.0",
]
gurobi = [
    "gurobipy>=10.0; python_version < '3.13'",
]
scipy = [
    "scipy>=1.7",
]
stim = [
    "stim>=1.12",
]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "pyomo>=6.0",
    "scipy>=1.7",
    "stim>=1.12",
]

[project.urls]
Homepage = "https://github.com/nzy1997/ILPDecoder"
Documentation = "https://github.com/nzy1997/ILPDecoder#readme"
Repository = "https://github.com/nzy1997/ILPDecoder"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ilpdecoder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = [
    "src/ilpdecoder/gurobi_backend.py",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "scipy>=1.7",
    "stim>=1.12",
]
